--- a/src/style/experience.css
+++ b/src/style/experience.css
@@ -7,7 +7,6 @@
     background-size: cover;
     opacity: 1;
     width: 100%;
-    /* height: 100%; */
     top: 0;
     bottom: 0;
     left: 0;
@@ -32,7 +31,7 @@
 .section-heading h1 {
     text-align: center;
     text-transform: uppercase;
-    margin-top: 5rem;
+    margin-top: 7rem;
 }
 
 .section-heading button {
@@ -49,7 +48,7 @@
 
 .timeline ul {
     border-left: 4px solid #ffe838;
-    border-radius: 0.8rem;
+    border-radius: 1rem;
     /* background-color: rgba(15, 15, 15, 0.8); */
     background-color: rgba(255,255,255,0.9);
     margin: 0 auto;
@@ -58,6 +57,8 @@
     list-style: none;
     text-align: left;
     width: 55%;
+    box-shadow: 0px 0px 3px 1px rgba(0, 0, 0, 0.2);
+
 }
 
 .timeline h1 {
