--- a/src/style/header.css
+++ b/src/style/header.css
@@ -36,7 +36,7 @@ nav ul li a {
   margin-right: 1rem;
   margin-top: 1rem;
   text-decoration: none;
-  color: white;
+  color: black;
   transition: border-bottom 150ms;
 }
 
