--- a/src/style/home.css
+++ b/src/style/home.css
@@ -69,7 +69,8 @@
     color: white;
 }
 
-.landing-text button {
+.view-work {
+    text-decoration: none;
     color: white;
     font-size: 2rem;
     border: 2px solid #fff;
@@ -82,7 +83,7 @@
     transition: border 350ms;
 }
 
-.landing-text button:hover {
+.view-work:hover {
     color: black;
     border: 2px solid black;
 }
