--- a/src/style/portfolio.css
+++ b/src/style/portfolio.css
@@ -54,8 +54,8 @@
  
 .details {
     text-align: center;
-    background: white;
-    padding: 1rem;
+    background: rgba(0,0,0,0.8);
+    padding: 2rem;
     border-radius: 1rem;
     margin-top: 1rem;
     box-shadow: 0px 0px 3px 2px rgba(0, 0, 0, 0.2);
@@ -68,17 +68,19 @@
 }
 
 .details-header h2 {
-    font-size: 2rem;
+    font-size: 3rem;
 }
 
-.details-header a {
-    font-size: 2rem;
+.details-header a {             /*Icon anchor styling*/
+    font-size: 3rem;
+    color: white;
 }
 
 .details p {
     padding-top: 1rem;
     font-size: 1.5rem;
     line-height: 1.5;
+    color: white;
 }
 
 .project-image {
@@ -94,3 +96,28 @@
     border-radius: 1rem;
 
 }
+
+.aura-logo {
+    width: 9rem;
+    height: 4rem;
+}
+
+.aura-logo img {
+    width: 100%;
+    height: 100%;
+    object-fit: fill;
+}
+
+.slice-it-logo {
+    width: auto;
+    height: 4rem;
+}
+
+.slice-it-logo img {
+    width: 100%;
+    height: 100%;
+}
+
+/* #live::before::before {
+    content: "Source"
+} */
