--- a/src/style/about.css
+++ b/src/style/about.css
@@ -7,6 +7,7 @@
     /* background: url('../images/ocean.jpg') no-repeat center; */
     /* background-size: cover; */
     position: relative;
+    padding-bottom: 5rem;
 }
 
 .about-component::before {
