--- a/src/style/portfolio.css
+++ b/src/style/portfolio.css
@@ -50,6 +50,12 @@
     grid-column: 1 / 2;
     grid-row: 1 / 2;
     justify-items: center;
+    background: url('../images/aura.png');
+    background-size: contain;
+    width: 100%;
+    height: auto;
+    flex: 1;
+    position: relative;
 }
  
 .details {
@@ -59,6 +65,20 @@
     border-radius: 1rem;
     margin-top: 1rem;
     box-shadow: 0px 0px 3px 2px rgba(0, 0, 0, 0.2);
+    height: inherit;
+    transition: .5s ease;
+    opacity: 0;
+    position: absolute;
+    /* top: 50%; */
+    /* left: 50%; */
+    /* transform: translate(-50%, -50%); */
+    /* -ms-transform: translate(-50%, -50%); */
+    text-align: center;
+    color: white;
+    background-color: black;
+    /* font-size: 2rem; */
+    border: none;
+    /* cursor: pointer; */
 
 }
 
@@ -83,18 +103,27 @@
     color: white;
 }
 
-.project-image {
-    width: 100%;
-    height: auto;
-}
-
 
 .project-image img {
     width: 100%;
     height: 100%;
     object-fit: contain;
     border-radius: 1rem;
+    opacity: 1;
+    display: block;
+    transition: 0.5s ease;
+    backface-visibility: hidden;
 
+}
+
+/*Image opacity on hover*/
+.aura-container:hover {
+    /* background: none; */
+}
+
+/*Show details on hover*/
+.details:hover {
+    opacity: 1;
 }
 
 .aura-logo {
